--- a/templates/add_customer.html
+++ b/templates/add_customer.html
@@ -18,7 +18,7 @@
             <div class="col-sm-10"> <input type="email" class="form-control" name="email" placeholder="Email" required> </div>
         </div>
         <div class="form-group"> <label for="inputEmail3" class="col-sm-2 control-label">Phone (*)</label>
-            <div class="col-sm-10"> <input type="text" class="form-control" name="phone" placeholder="Phone" required> </div>
+            <div class="col-sm-10"> <input type="tel" pattern=".{11}" class="form-control" name="phone" placeholder="The phone number should not exceed 11 digits." required> </div>
         </div>
         <!-- Button trigger modal -->
         <div class="form-group" style="text-align: center; padding: 20px;"> 
